# voice_orchestration

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
server/: config.py  main.py
server/bot/: bot.py  context.py  flows.py  prompts.py  tools.py
server/utils/: logger.py
tests/: test_context.py  test_flows.py  test_integration.py  test_prompts.py  test_tools.py
